# shadow

./: README.md  pyproject.toml
.github/: FUNDING.yml
shadow_app/: banner.py  behavior.py  cli.py  diff.py  store.py
tests/: test_shadow.py
