[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow"
version = "0.1.0"
description = "MAD agent trace diff"
requires-python = ">=3.11"
dependencies = [
  "click>=8.0",
  "rich>=13.0",
  "httpx>=0.27",
]

[project.scripts]
shadow = "shadow_app.cli:main"
