[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow"
version = "0.2.0"
description = "Behavioral drift / tamper detection for AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.0", "rich>=13.0", "httpx>=0.27"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
shadow = "shadow_app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shadow_app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
